# descent

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE_3RD_PARTY  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  versions.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yaml  codeql.yml  docs.yaml  lint.yaml
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/development/: index.html
0.4.1/reference/: index.html
0.4.1/reference/optim/: index.html
0.4.1/reference/targets/: index.html
0.4.1/reference/utils/: index.html
0.4.1/search/: search_index.json
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/development/: index.html
0.5.0/reference/: index.html
0.5.0/reference/SUMMARY/: index.html
0.5.0/reference/optim/: index.html
0.5.0/reference/targets/: index.html
0.5.0/reference/train/: index.html
0.5.0/reference/utils/: index.html
0.5.0/search/: search_index.json
0.5.2/: 404.html  index.html  sitemap.xml
0.5.2/development/: index.html
0.5.2/reference/: index.html
0.5.2/reference/SUMMARY/: index.html
0.5.2/reference/optim/: index.html
0.5.2/reference/targets/: index.html
0.5.2/reference/train/: index.html
0.5.2/scripts/: gen_ref_pages.py
0.5.2/search/: search_index.json
descent/: __init__.py  _version.py  metrics.py  train.py  transforms.py
descent/data/: __init__.py  data.py  energy.py
descent/models/: __init__.py  models.py  smirnoff.py
descent/objectives/: __init__.py  energy.py  objectives.py
descent/optim/: __init__.py  _lm.py
descent/optimizers/: __init__.py
descent/targets/: __init__.py  _targets.py  dimers.py  energy.py  thermo.py
descent/tests/: __init__.py  conftest.py  geometric.py  test_metrics.py  test_train.py  test_transforms.py
descent/utilities/: __init__.py  smirnoff.py  utilities.py
descent/utils/: __init__.py  dataset.py  loss.py  molecule.py  reporting.py
devtools/conda-envs/: meta.yaml
devtools/envs/: base.yaml
docs/: development.md
examples/: README.md  energy-and-gradient.ipynb  relative-energies.ipynb
integration-tests/: test_energy_training.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/development/: index.html
latest/reference/: index.html
latest/search/: search_index.json
(+56 files in other folders)
