[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8", "wheel", "versioneer"]
build-backend = "setuptools.build_meta"

[project]
name = "descent"
description = "Differentiably compute energies of molecules using SMIRNOFF force fields."
authors = [ {name = "Simon Boothroyd"} ]
license = { text = "MIT" }
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]

[tool.setuptools.packages.find]
include = ["descent*"]

[tool.setuptools_scm]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
ignore = ["C901"]
select = ["B","C","E","F","W","B9"]
ignore-init-module-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
omit = ["**/tests/*", "**/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ = .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
